--- a/app/globals.css
+++ b/app/globals.css
@@ -8,7 +8,7 @@
   --background-end-rgb: 255, 255, 255;
 }
 
-@media (prefers-color-scheme: dark) {
+@media (prefers-color-scheme: light) {
   :root {
     --foreground-rgb: 177, 177, 177;
     --background-start-rgb: 0, 0, 0;
