--- a/app/globals.css
+++ b/app/globals.css
@@ -9,19 +9,19 @@
     --background-end-rgb: 0, 0, 0;
   }
 }
-.btn{
+.btn {
   @apply font-bold py-1.5 rounded-xl border px-10;
 }
 .btn-primary {
-    @apply bg-primary-blue text-white
+  @apply bg-primary-blue text-white
     transition-all duration-300
     hover:bg-primary-white hover:text-primary-blue hover:border hover:border-primary-blue
-    active:scale-95 active:duration-150
+    active:scale-95 active:duration-150;
 }
 
-.btn-secondary{
-    @apply text-primary-blue bg-primary-white border-primary-blue
+.btn-secondary {
+  @apply text-primary-blue bg-primary-white border-primary-blue
     transition-all duration-300
     hover:bg-primary-blue hover:text-primary-white hover:border hover:border-primary-blue
-    active:scale-95 active:duration-150
+    active:scale-95 active:duration-150;
 }
