fix: useEffect removed and hover handled with css
all the functions for mouse states removed and 2 css decleration added.
However, Icon components are still able to take props.
tailwind hovers for bg color and text color of icon container added.

--- a/app/globals.css
+++ b/app/globals.css
@@ -30,3 +30,11 @@
   fill: #2e8dff;
   color:#2e8dff;
 }
+
+.category-icon{
+  fill:rgb(177, 177, 177);
+}
+
+.category-icon--container:hover .category-icon{
+  fill: #2e8dff;
+}
