add: mobile layout of My Learning page enchanced, colors fixed
When a course in My Learning page is clicked, the page is scrolled down where the course detail is rendered.
smooth scrolling added.
background color of MyLearningCard component fixed by setting it to bg-primary-white

--- a/app/globals.css
+++ b/app/globals.css
@@ -16,6 +16,9 @@
     --background-end-rgb: 245, 245, 245;
   }
 }
+html{
+  scroll-behavior: smooth !important;
+}
 .btn {
   @apply font-bold py-1.5 rounded-xl border-2 px-10;
 }
