--- a/app/globals.css
+++ b/app/globals.css
@@ -16,7 +16,7 @@
     --background-end-rgb: 245, 245, 245;
   }
 }
-html{
+html {
   scroll-behavior: smooth !important;
 }
 .btn {
@@ -68,7 +68,7 @@ input[type="checkbox"]:checked::before {
   font-size: 18px;
   position: relative;
   overflow: hidden;
-  cursor:pointer;
+  cursor: pointer;
 }
 
 .text {
@@ -91,9 +91,36 @@ input[type="checkbox"]:checked::before {
   top: 80px;
 }
 .lang-btn:hover .primary {
-  top:-80px
+  top: -80px;
 }
 
 .lang-btn:hover .secondary {
-  top:0px
+  top: 0px;
+}
+
+.profile-card{
+  box-shadow: -5px 8px 45px rgba(51, 51, 51, 0.126);
+  transition: all .4s;
+}
+.profile-card:hover{
+  border-radius: 30px;
+  height: 260px;
+}
+.profile-card:hover img{
+  border-radius: 30px;
+  transform: translateY(-70px);
+}
+
+.caption{
+  transform: translateY(-90px);
+  transition: all .5s;
+  pointer-events: none;
+}
+.profile-card:hover .caption{
+  opacity: 1;
+  pointer-events: all;
+}
+
+.profile-image {
+  transition: all .4s;
 }
