--- a/app/globals.css
+++ b/app/globals.css
@@ -98,29 +98,46 @@ input[type="checkbox"]:checked::before {
   top: 0px;
 }
 
-.profile-card{
+.profile-card {
   box-shadow: -5px 8px 45px rgba(51, 51, 51, 0.126);
-  transition: all .4s;
+  transition: all 0.4s;
 }
-.profile-card:hover{
+.profile-card:hover {
   border-radius: 30px;
   height: 260px;
 }
-.profile-card:hover img{
+.profile-card:hover img {
   border-radius: 30px;
   transform: translateY(-70px);
 }
 
-.caption{
+.caption {
   transform: translateY(-90px);
-  transition: all .5s;
+  transition: all 0.5s;
   pointer-events: none;
 }
-.profile-card:hover .caption{
+.profile-card:hover .caption {
   opacity: 1;
   pointer-events: all;
 }
 
 .profile-image {
-  transition: all .4s;
+  transition: all 0.4s;
+}
+.gradient-bg {
+	background: linear-gradient(-45deg, #ee7752, #e73c7e, #2e8dff, #23d5ab);
+	background-size: 400% 400%;
+	animation: gradient 15s ease infinite;
+}
+
+@keyframes gradient {
+	0% {
+		background-position: 0% 50%;
+	}
+	50% {
+		background-position: 100% 50%;
+	}
+	100% {
+		background-position: 0% 50%;
+	}
 }
