--- a/app/globals.css
+++ b/app/globals.css
@@ -26,11 +26,11 @@ html {
 }
 
 .btn-primary {
-  @apply text-white transition-all border-primary-blue duration-300 bg-primary-blue hover: bg-primary-white hover:text-primary-blue hover:border-primary-blue active:scale-95 active:duration-150;
+  @apply text-white transition-all border-primary-blue duration-300 bg-primary-blue hover:bg-primary-white hover:text-primary-blue hover:border-primary-blue active:scale-95 active:duration-150;
 }
 
 .btn-secondary {
-  @apply transition-all duration-300 text-primary-blue bg-primary-white border-primary-blue hover: bg-primary-blue hover:text-primary-white hover:border-primary-blue active:scale-95 active:duration-150;
+  @apply transition-all duration-300 text-primary-blue bg-primary-white border-primary-blue hover:bg-primary-blue hover:text-primary-white hover:border-primary-blue active:scale-95 active:duration-150;
 }
 
 .mainLinks:hover svg,
@@ -48,7 +48,7 @@ html {
 }
 
 input[type="checkbox"] {
-  @apply appearance-none bg-white text-current w-[1.15rem] h-[1.15rem] grid place-content-center rounded border-[0.15em] border-[rgb(177, 177, 177)];
+  @apply appearance-none bg-white text-current w-[1.15rem] h-[1.15rem] grid place-content-center rounded border-[0.15em] border-[rgb(177,177,177)];
 }
 
 input[type="checkbox"]::before {
@@ -105,5 +105,5 @@ input[type="checkbox"]:checked::before {
 }
 
 .animatedUnderline {
-  @apply inline-block cursor-pointer relative after: content-[''] after:transition-transform after:duration-300 after:ease-out after:w-full after:h-[2px] after:absolute after:bottom-0 after:left-0 after:bg-primary-blue after:origin-bottom-right after:scale-x-0 hover:after:scale-x-100 hover:after:origin-bottom-left
+  @apply inline-block cursor-pointer relative after:content-[''] after:transition-transform after:duration-300 after:ease-out after:w-full after:h-[2px] after:absolute after:bottom-0 after:left-0 after:bg-primary-blue after:origin-bottom-right after:scale-x-0 hover:after:scale-x-100 hover:after:origin-bottom-left;
 }
