--- a/app/globals.css
+++ b/app/globals.css
@@ -104,6 +104,7 @@ input[type="checkbox"]:checked::before {
 }
 .animatedUnderline {
   @apply inline-block cursor-pointer relative after:content-[''] after:transition-transform after:duration-300 after:ease-out after:w-full after:h-[2px] after:absolute after:bottom-0 after:left-0 after:bg-primary-blue after:origin-bottom-right after:scale-x-0 hover:after:scale-x-100 hover:after:origin-bottom-left;
+}
   .profile-card {
     box-shadow: -5px 8px 45px rgba(51, 51, 51, 0.126);
     transition: box-shadow 0.3s ease-in-out, border-radius 0.3s ease-in-out,
